# hotspotter

./: .gitignore  .gitmodules  Config.py  DataStructures.py  Experiments.py  Facade.py  HotSpotter.py  HotSpotterAPI.py  LICENSE.txt  MainWindow.py  OpenGLContext.profile  Parallelize.py  Pref.py  Preferences.py  Printable.py  QueryResult.py  README.md  README.txt  RUNME-to-fix-issues.sh  TODO.txt  __common__.py  __init__.py  __run_experiments.py  _test_configurations.py  algos.py  algos2.py  argparse2.py  autodetect.py  backprefagg  bagofwords.py  build_tpl.py  chip_compute2.py  clonedb.py  collatz.py  compute_chips2.py  convert_2hsdb.py  convert_db.py  convert_to_hotspotterdb.py  crall-autobuild-tpl.sh  cross_platform.py  (+88 more)
_broken/: MainWindow.py  bagofwords.py  oxsty_results.py  report_results2.py
_demos/: k_reciprocal_nearest_neighbors.py  vsone.py
_doc/: HotSpotterUserGuide.tex  IDEAS.txt  TEST_CASES.txt  developer_install_instructions.txt  hotspotter_system_diagram.dia
_frontend/: AddChipsChoiceDialog.py  ChangeNameDialog.py  ChoiceDialog.py  ChooseNameDialog.py  EditPrefSkel.py  HotSpotterMainWindow.py  ImportImagesChoice.py  MainDialog.py  MainSkel.py  MainSkel.ui  OpenDatabaseDialog.py  Troubleshooting.py
_graveyard/: Config_graveyard.py  Hot.py  __common__.py  __original_init__.py  dev.py  dodemo.py  draw_func_grave.py  experiments.py  extern_feat.py  extract_patch_ellipse.py  extract_patch_old.py  feature_compute_graveyard.py  misc.py  (+22 more)
ideas/cxx_ext/: CMakeLists.txt
tpl/saliency/test/: CMakeLists.txt  main.cpp  make.bat  saliency.cpp  saliency.h  saliency.h.gch  saliency2.h  saliency_makescript.sh
(+504 files in other folders)
